# lucas

./: README.md
cascade_pid_controller/: CMakeLists.txt  README.md  package.xml
cascade_pid_controller/cmake_stuff/: buildFiles.cmake  findDependencies.cmake  options.cmake  printInfo.cmake
cascade_pid_controller/config/: params.yaml
cascade_pid_controller/include/cascade_pid_controller/: CascadePidController.h  utils.hpp
cascade_pid_controller/include/cascade_pid_controller/nodes/: CascadePidControllerNode.h
cascade_pid_controller/launch/: cascade_pid_controller.launch  run.py
cascade_pid_controller/src/: CascadePidController.cpp  utils.cpp
cascade_pid_controller/src/nodes/: CascadePidControllerNode.cpp
cascade_pid_controller/utils/: CMakeLists.txt  cascade_pid_controller_main.cpp
cascade_pid_controller_msgs/: CMakeLists.txt  README.md  package.xml
cascade_pid_controller_msgs/msg/: State.msg  TrajCommand.msg
catec_control_manager/: .gitignore  CMakeLists.txt  README.md  add_disclaimer.sh  package.xml
catec_control_manager/cmake_stuff/: compilerOptions.cmake  findDependencies.cmake  options.cmake  printInfo.cmake  versions.cmake
catec_control_manager/config/: general_params.yaml  params.yaml
catec_control_manager/include/catec_control_manager/: control_manager_state_machine.h  events_definition.h  timer_async.h  tinyfsm.h
catec_control_manager/include/catec_control_manager/common/: config.h  log_manager.h  low_pass_filter.h  parameters_yaml_parser.h  planner.h  types.h  utils.h
catec_control_manager/include/catec_control_manager/ros_nodes/: control_manager_node.h  ros_parsers.h
catec_control_manager/include/catec_control_manager/states/: assisted.h  base_state.h  emergency.h  flying_manual.h  going_to_wp.h  hover.h  landed_armed.h  landed_auto.h  landed_disarmed.h  landing.h  offboard.h  prelanding.h  states_definition.h  taking_off.h  uninitialized.h
catec_control_manager/launch/: catec_control_manager.launch  run.launch.py
catec_control_manager/scripts/: rc_velocity_references.py
catec_control_manager/src/: control_manager_state_machine.cpp
catec_control_manager/src/ros_nodes/: control_manager_node.cpp
catec_control_manager/src/states/: assisted.cpp  emergency.cpp  flying_manual.cpp  going_to_wp.cpp  hover.cpp  landed_armed.cpp  landed_auto.cpp  landed_disarmed.cpp  landing.cpp  offboard.cpp  prelanding.cpp  taking_off.cpp  uninitialized.cpp
catec_control_manager/utils/: CMakeLists.txt  control_manager_main.cpp
catec_control_manager_msgs/: CMakeLists.txt  README.md  package.xml
catec_control_manager_msgs/msg/: State.msg
catec_control_manager_msgs/srv/: GoToWaypoint.srv  TakeOff.srv
