<?xml version="1.0"?>
<package format="2">

  <name>cascade_pid_controller</name>
  <version>1.0.0</version>
  <description>The cascade_pid_controller package</description>

  <maintainer email="jimurillo@catec.aero">José I. Murillo Álvarez</maintainer>
  <maintainer email="razhinos@catec.aero">Raúl Zahínos Marín</maintainer>

 <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>control_toolbox</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>catec_control_manager_msgs</depend>
  <depend>cascade_pid_controller_msgs</depend>

</package>