<?xml version="1.0"?>
<package format="3">

  <name>cascade_pid_controller</name>
  <version>1.0.0</version>
  <description>The cascade_pid_controller package</description>

  <maintainer email="jimurillo@catec.aero">José I. Murillo Álvarez</maintainer>
  <maintainer email="rzahinos@catec.aero">Raúl Zahínos Marín</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>control_toolbox</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>catec_control_manager_msgs</depend>
  <depend>cascade_pid_controller_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>