<?xml version="1.0"?>
<package format="3">
   <name>cascade_pid_controller_msgs</name>
   <version>1.0.0</version>
   <description>The cascade_pid_controller_msgs package</description>

   <maintainer email="jimurillo@catec.aero">José I. Murillo Álvarez</maintainer>
   <maintainer email="razhinos@catec.aero">Raúl Zahínos Marín</maintainer>

   <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>