<?xml version="1.0"?>
<package format="2">

  <name>catec_control_manager</name>
  <version>1.1.0</version>
  <description>The catec_control_manager package</description>

  <maintainer email="mmontes@catec.aero">Marco A. Montes Grova</maintainer>
  <maintainer email="jimurillo@catec.aero">Jose Ignacio Murillo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>mavros_msgs</build_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <build_depend>catec_control_manager_msgs</build_depend>
  <exec_depend>catec_control_manager_msgs</exec_depend>

  <build_depend>cascade_pid_controller_msgs</build_depend>
  <exec_depend>cascade_pid_controller_msgs</exec_depend>

</package>