<?xml version="1.0"?>
<package format="3">

  <name>catec_control_manager</name>
  <version>1.1.0</version>
  <description>The catec_control_manager package</description>

  <maintainer email="mmontes@catec.aero">Marco A. Montes Grova</maintainer>
  <maintainer email="jimurillo@catec.aero">Jose Ignacio Murillo</maintainer>
  <maintainer email="jmgonzalez@catec.aero">Jose Manuel Gonzalez Marin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>mavros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>spdlog</depend>
  <depend>eigen3</depend>
  <depend>catec_control_manager_msgs</depend>
  <depend>cascade_pid_controller_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>