<?xml version="1.0"?>
<package format="2">
   <name>catec_control_manager_msgs</name>
   <version>1.0.0</version>
   <description>The catec_control_manager_msgs package</description>

   <maintainer email="mmontes@catec.aero">Marco A. Montes</maintainer>
   <maintainer email="jimurillo@catec.aero">Jose Ignacio Murillo</maintainer>

   <license>GPLv3</license>

   <buildtool_depend>catkin</buildtool_depend>

   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   
   <build_export_depend>message_generation</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>

</package>