<?xml version="1.0"?>
<package format="3">
  <name>catec_control_manager_msgs</name>
  <version>1.0.0</version>
  <description>The catec_control_manager_msgs package</description>

  <maintainer email="mmontes@catec.aero">Marco A. Montes</maintainer>
  <maintainer email="jimurillo@catec.aero">Jose Ignacio Murillo</maintainer>
  <maintainer email="jmgonzalez@catec.aero">Jose Manuel Gonzalez Marin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>